46. Version 3.9.46 Modified behavior of bulksave to prevent skipping records, if skipped they are removed from the table
47. Version 3.9.47 Removed code that was causing records to be set as "waiting"
48. Version 3.9.48 Fixed a problem that caused the dropdown to be closed after opening
49. Version 3.9.49 Overhauled finding missing glossary words, overhauled/renaming diverse observers
50. Version 3.9.50 Various fixes
51. Version 3.9.51 Completely overhauled the translatePage function, also corrected several wrong functions
52. Version 3.9.52 Improved DeepL behavior with capitals
53. Version 3.9.53 Rewritten populateWithLocal function
54. Version 3.9.54 Fixed a problem with translation function "undefined editor"
55. Version 3.9.55 Fixed a typo in the plural handling function
56. Version 3.9.56 Fixed another typo in the plural handling function
57. Version 3.9.57 Fixed a problem whith retranslation fuzzy with local
58. Version 3.9.58 Improved plural checking for glossary words for Dutch, and removed the new function for handling the casing for Russia and Ukrain
59. Version 3.9.59 Improved glossary behavior
60. Version 3.9.60 Glossary now recognizes plurals and combined glossary words
61. Version 3.9.61 Glossary now recognizes "website" as wrong translation
62. Version 3.9.62 Missing entry in manifest for Firefox
63. Version 3.9.63 Improved memory behavior
64. Version 3.9.64 Improved plural marking
65. Version 3.9.65 Improved CSS behavior
66. Version 3.9.66 Improved calculation and indication of translation quality
67. Version 3.9.67 Fixed a typo in commontranslate.js
68. Version 3.9.68 the spellcheckIgnore table was not provided to the spellchecker, also the local label was not put properly into the preview
69. Version 3.9.69 Retranslation of an existing translation did not remove the marking if glossary words were corrected
70. Version 3.9.70 When translating records the preview was not marked.